--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "date-fns": "^3.6.0",
+    "dotenv": "^16.4.7",
+    "encoding": "^0.1.13",
     "lucide-react": "^0.299.0",
     "next": "13.5.1",
     "next-themes": "^0.3.0",
